# teamster

./: .dockerignore  .flake8  .gitignore  .gitmodules  .mcp.json  .pdm-python  .pdm.toml  .prettierrc.yaml  .sql-formatter  .sql-formatter.json  404.html  CLAUDE.md  Dockerfile  README.md  README.md.tmpl  compose.yaml  conftest.py  dagster.yaml  dbt_project.yml  dev-dagster-cloud.yaml  foo.json  foo.yaml  hooks.py  index.html  kipptaf-audit.md  kipptaf-drops.sql  log  mkdocs.yml  mkdocs.yml.tmpl  overrides.txt  pdm.toml  profiles.yml  pyproject.toml  pyproject.toml.tmpl  requirements.txt  rpt_tableau__academic_goals_rollup.sql  rpt_tableau__college_assessment_dashboard_v3.yml  teamster-init.sh
.claude/: CLAUDE.md  settings.json  settings.local.json
.dagster/: .gitignore  alerts.yaml  alerts.yaml.tmpl  asdf-cloud-workspace-gh.yaml  cloud-workspace-gh.yaml  cloud-workspace-gh.yaml.tmpl  cloud-workspace-prod.yaml.tmpl  cloud-workspace-stg.yaml  cloud-workspace-stg.yaml copy.tmpl  cloud-workspace-stg.yaml.tmpl  dagster-cloud-branch.yaml  dagster-cloud-dev.yaml  dagster-cloud-kippcamden.yaml  dagster-cloud-kippmiami.yaml  dagster-cloud-kippnewark.yaml  dagster-cloud-kipptaf.yaml  dagster-cloud-staging.yaml  dagster-cloud-test.yaml  dagster-cloud-workspace-sync.sh  dagster-cloud.yaml  dagster-cloud.yaml.tmpl  dagster-deployment.sh  deployment-settings.yaml  dev-cloud-workspace-gh.yaml  dev-dagster-cloud.yaml  kippcamden-cloud-workspace-gh.yaml  kippmiami-cloud-workspace-gh.yaml  kippnewark-cloud-workspace-gh.yaml  kipptaf-cloud-workspace-gh.yaml  validate.sh
.dbt/: .user.yml  profiles.yml
.devcontainer/: CLAUDE.md  devcontainer.json  docker-compose.yml
.docker/: Dockerfile.core  Dockerfile.deps
.gcloud/: cleanup-policies-kippcamden.json  cleanup-policies-kippmiami.json  cleanup-policies-kippnewark.json  cleanup-policies-kipptaf.json  cleanup-policies-staging.json  cleanup-policies.json  cleanup-policies.sh  create-cluster.sh  create-gke-cluster.sh  gh.sh  k8s.sh
.github/: CLAUDE.md  CODEOWNERS  actionlint.yaml  checkout-branches.sh  dependabot.yml  dev-branch.sh  merge-branch.sh  merge-dev.sh  merge-main.sh  merge-root.sh  open-pr.sh  pull-all.sh  pull_request_template.md  stg-branch.sh
.google/: gcloud-common-init.sh  gcloud-init.sh  gcloud-local-init.sh  k8s-init.sh  k8s-secret.sh  wi-config.sh  wi-federation-gh.sh  wi-test.sh  wi-test.yaml
.helm/: helm-install.sh  values-override.yaml  values-override.yaml.tmpl  values.yaml
.init/: common-init.sh  init-core.sh  init-local.sh  local-init.sh
.k8s/: CLAUDE.md  setup.sh
.teamster/: common-init.sh  env-update.sh  local-init.sh
.trunk/: CLAUDE.md  trunk.yaml
CLAUDE/: index.html
CODE_OF_CONDUCT/: index.html
CONTRIBUTING/: index.html
SECURITY/: index.html
SUPPORT/: index.html
alchemer/: README.md  dbt_project.yml
dagster-workspace/: dg.toml  pyproject.toml
dagster-workspace/projects/foo/: pyproject.toml
dagster-workspace/projects/foo/foo/: definitions.py
dagster-workspace/projects/kippmiami/: pyproject.toml
dagster-workspace/projects/kipptaf/: pyproject.toml
dagster-workspace/projects/kipptaf/src/kipptaf/components/: __init__.py  foo.py
dagster-workspace/projects/kipptaf/src/kipptaf/defs/foo/: defs.yaml
data/: AR.csv  FL_FAST_SEL_Domains_K-2.csv  FL_FAST_SM_K-2.csv  FL_FAST_SR_K-2.csv  SEL.csv  SEL_Dashboard_Standards_v2.csv  SEL_SkillArea_v1.csv  SM.csv  SM_SkillArea_v1.csv  SR_Dashboard_Standards_v2.csv  SR_SkillArea_v1.csv
deanslist/: README.md  dbt_project.yml
docs/: CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  SUPPORT.md  contingency.md  getting-started.md  index.md  powerschool.md  star-schema-decisions.md
edplan/: README.md
env/: .env.tmpl  .gitignore  common.env.tmpl  core.env.tmpl  env-update.sh  envsubst-file.sh  local.env.tmpl  prod.env.tmpl  stg.env.tmpl
getting-started/: index.html
guides/: index.html
kippcamden/: dbt_project.yml  packages.yml  profiles.yml
kippmiami/: dbt_project.yml  profiles.yml
kippnewark/: dbt_project.yml  packages.yml  profiles.yml
kipptaf/: dbt_project.yml  packages.yml  profiles.yml
macros/: get_gcs_uri.sql  incremental_merge.sql  incremental_merge_source_file.sql  transform_cols_base_model.sql
mcp/: CLAUDE.md  dagster_plus.py  pyproject.toml
powerschool/: dbt_project.yml  packages.yml
schoolmint/: dbt_project.yml
scripts/: CLAUDE.md  audit_marts_yaml.py  avro-schema-update.py  backfill_google_directory_student_external_ids.py  bq-cleanup.sh  bq-migrate-gsheets.sql  build_maher_upload_file.py  check-cube-pii-coverage.py  cube-rest-mcp-launch.sh  cube_rest_mcp.py  dagster-dev.py  dagster-dev.sh  dagster-mcp-launch.sh  day2_collect.py  day2_summarize.py  dbt-bq-audit.py  dbt-build-init.sh  dbt-illuminate-repositories.sh  dbt-manifest.py  dbt-mcp-launch.sh  dbt-sxs.py  dbt-sxs.sh  dbt-yaml.py  dbt.py  enrich_staging_descriptions.py  extract_ceds_schema.py  extract_edfi_schema.py  extract_pdf_dictionary.py  gen-automations-doc.py  gen_column_naming_audit_inventory.py  generate_adp_api_csr.sh  generate_cube_reference.py  generate_marts_reference.py  init_sftp_integration.py  json2py.py  migrate-asset-key.py  migrate-sheets.py  propagate_mart_descriptions.py  reencode_avro_partitions.py  render_source_to_models.py  (+11 more)
search/: search_index.json
staging/: packages.yml  profiles.yml
(+7284 files in other folders)
