[project]
name = "kippmiami"
requires-python = ">=3.13,<3.14"
version = "0.1.0"
dependencies = ["dagster>=1.11.4"]

[dependency-groups]
dev = ["dagster-webserver", "dagster-dg-cli"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "kippmiami"
registry_modules = ["kippmiami.components.*"]
